--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "react-icons": "^5.3.0",
         "tailwind-merge": "^2.5.4"
     }
 }
