--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
+        "tailwindcss-animated": "^1.1.2",
         "vite": "^5.0"
     },
     "dependencies": {
