--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "react-icons": "^5.3.0",
+        "react-multi-carousel": "^2.8.5",
         "tailwind-merge": "^2.5.4"
     }
 }
