--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "react-icons": "^5.3.0",
         "react-multi-carousel": "^2.8.5",
+        "react-slick": "^0.30.2",
+        "slick-carousel": "^1.8.1",
         "tailwind-merge": "^2.5.4"
     }
 }
