--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "flowbite": "^2.5.2",
+        "flowbite-react": "^0.10.2",
+        "prop-types": "^15.8.1",
         "react-icons": "^5.3.0",
         "react-multi-carousel": "^2.8.5",
         "react-slick": "^0.30.2",
