--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.13.5",
+        "@emotion/styled": "^11.13.5",
+        "@mui/icons-material": "^6.1.8",
+        "@mui/material": "^6.1.8",
         "flowbite": "^2.5.2",
         "flowbite-react": "^0.10.2",
         "prop-types": "^15.8.1",
