fix: login and register buyer

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "@emotion/react": "^11.13.5",
         "@emotion/styled": "^11.13.5",
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
         "@mui/icons-material": "^6.1.8",
         "@mui/material": "^6.1.8",
         "flowbite": "^2.5.2",
