--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "prop-types": "^15.8.1",
         "react-icons": "^5.3.0",
         "react-multi-carousel": "^2.8.5",
+        "react-router-dom": "^7.0.1",
         "react-slick": "^0.30.2",
         "slick-carousel": "^1.8.1",
         "tailwind-merge": "^2.5.4"
